backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: myapp
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
        - name: backend
          image: backend:latest
          imagePullPolicy: Never   # local build hai, minikube docker-env me build karo
          ports:
            - containerPort: 5000   # apna actual backend port yahan daalo
