db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: myapp
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: fileforge-mongo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: db-pvc   # db-pvc.yaml wali claim
